# shutdown_on_lan

./: CMakeLists.txt
client/: SkyBalloon Server Manager.sln  SkyBalloon Server Manager.vcproj  SkyBalloon_Server_Manager.c  logger_cbrucks.h  makefile  udp_comm.c  udp_comm.h
client/Debug/: BuildLog.htm  SkyBalloon Server Manager.ilk  mt.dep  vc90.idb
daemon/: CMakeLists.txt  shutdown-on-lan.sln  shutdown-on-lan.vcproj  shutdown_on_lan.c  sol  udp_comm.c  udp_comm.h
daemon/debian/: postinst  postrm  sol
src/: get_platform.h  shutdown_on_lan.c
